# moneywiz-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SESSION_CONTEXT.md  SETUP.md  analyze_schema.py  claude_desktop_config.json  continue-development.py  final_scheduled_investigation.py  focused_scheduled_investigation.py  investigate_budgets.py  investigate_budgets_deep.py  investigate_scheduled_transactions.py  pyproject.toml  setup_env.py  test_mcp_connection.py  test_mcp_minimal.py
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  pypi-publish.yml  release.yml  security.yml
docs/: RELEASING.md  ROADMAP.md
examples/: claude_code_config.json  claude_desktop_config.json  claude_desktop_config_venv.json
scripts/: check-ci.sh
specs/: financial-analytics-design.md  implementation-status.md  moneywiz-mcp-implementation.md  moneywiz-mcp-prd.md
src/moneywiz_mcp_server/: __init__.py  __main__.py  config.py  main.py  server.py
src/moneywiz_mcp_server/database/: __init__.py  connection.py
src/moneywiz_mcp_server/models/: __init__.py  analytics_result.py  base.py  budget.py  currency_types.py  responses.py  savings_responses.py  scheduled_transaction.py  transaction.py
src/moneywiz_mcp_server/services/: __init__.py  account_service.py  budget_service.py  category_classification_service.py  savings_service.py  scheduled_transaction_service.py  transaction_service.py  trend_service.py
src/moneywiz_mcp_server/tools/: __init__.py  accounts.py  transactions.py
src/moneywiz_mcp_server/utils/: __init__.py  date_utils.py  env_loader.py  formatters.py  validators.py
tests/: __init__.py  conftest.py  test_analytics_basic.py
tests/fixtures/: create_test_db.py  sample_moneywiz.sqlite
tests/integration/: test_budgets_integration.py  test_category_resolution.py  test_fastmcp_tools.py  test_scheduled_transactions_integration.py  test_service_compatibility.py
tests/unit/: test_account_tools.py  test_budget_models.py  test_budget_service.py  test_category_classification_data_driven.py  test_currency_types.py  test_database_connection.py  test_package_metadata.py  test_savings_service.py  test_scheduled_transaction_models.py  test_scheduled_transaction_service.py  test_transaction_tags.py  test_trend_service.py
